--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,31 @@
                         </goals>
                     </execution>
                     <execution><!-- id (придумываем сами) -->
+                        <id>check123</id>
+                        <goals><!-- какую цель выполняем (берём из справки) -->
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                    <execution><!-- id (придумываем сами) -->
                         <id>report123</id>
                         <goals><!-- какую цель выполняем (берём из справки) -->
                             <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <rules>
+                        <rule>
+                            <limits>
+                                <limit>
+                                    <counter>BRANCH</counter>
+                                    <value>COVEREDRATIO</value>
+                                    <minimum>100%</minimum>
+                                </limit>
+                            </limits>
+                        </rule>
+                    </rules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
